# Research-Copilot

./: .env.example  .gitignore  AGENTS.md  DECISIONS.md  PROJECT_STATUS.md  README.md
backend/: alembic.ini  pyproject.toml  requirements.txt  run_desktop_backend.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: brainstorm.py  health.py  library.py  memory.py  papers.py  projects.py  reflections.py  reports.py  repos.py  reproduction.py  settings.py  summaries.py  tasks.py  translation.py
backend/app/core/: config.py  logging.py  runtime_settings.py  security.py  utils.py
backend/app/db/: init_db.py  session.py
backend/app/db/migrations/: README.md  (+1 more)
backend/app/tests/: conftest.py  e2e_seed.py  test_db_init.py  test_health.py  test_library.py  test_memory.py  test_paper_reader.py  test_paper_workspace.py  test_project_search.py  test_projects.py  test_reflections.py  test_repo_finder.py  test_reproduction_workflow.py  test_runtime_paths.py  test_search.py  test_search_ranking.py  test_settings.py  test_summary.py  test_tasks.py  test_translation.py  test_weekly_reports.py
backend/backend/data/: research_copilot.db
cli/: pyproject.toml
cli/research_cli/: client.py  main.py
cli/research_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cli/research_cli/commands/: brainstorm.py  download.py  memory.py  reflection.py  repo.py  repro.py  search.py  summarize.py
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
(+243 files in other folders)
