[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-copilot-backend"
version = "0.1.0"
description = "Backend for Research Copilot"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["app/tests"]
