[package]
name = "research-copilot-desktop"
version = "0.1.0"
description = "Research Copilot desktop shell"
authors = ["Research Copilot"]
edition = "2021"

[lib]
name = "research_copilot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.6", features = [] }
